src/force-app/main/default/objects/FeaturesEnabler__c/FeaturesEnabler__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Features Enabler</label>
</CustomObject>