src/force-app/main/default/objects/FeaturesEnabler__c/fields/Account_AlwaysActiveWhenInsert__c.field-meta.xml
<CustomField>
    <fullName>Account_AlwaysActiveWhenInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account.AlwaysActiveWhenInsert</label>
    <type>Checkbox</type>
</CustomField>