src/force-app/main/default/objects/FeaturesEnabler__c/fields/Account_CreateNewAccountActive__c.field-meta.xml
<CustomField>
    <fullName>Account_CreateNewAccountActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account.CreateNewAccountActive</label>
    <type>Checkbox</type>
</CustomField>