src/force-app/main/default/objects/FeaturesEnabler__c/fields/Account_MakeActiveOnInsert__c.field-meta.xml
<CustomField>
    <fullName>Account_MakeActiveOnInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable/Disable activation of new accounts before they are inserted</description>
    <label>Account.MakeActiveOnInsert</label>
    <type>Checkbox</type>
</CustomField>