src/force-app/main/default/objects/FeaturesEnabler__c/fields/Account_NewAccountAlwaysActive__c.field-meta.xml
<CustomField>
    <fullName>Account_NewAccountAlwaysActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Account.NewAccountAlwaysActive</label>
    <type>Checkbox</type>
</CustomField>