src/force-app/main/default/objects/FeaturesEnabler__c/fields/Account_NewRecordIsAlwaysActive__c.field-meta.xml
<CustomField>
    <fullName>Account_NewRecordIsAlwaysActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account.NewRecordIsAlwaysActive</label>
    <type>Checkbox</type>
</CustomField>