src/force-app/main/default/objects/FeaturesEnabler__c/fields/Account_PreventFromUpdatingInactive__c.field-meta.xml
<CustomField>
    <fullName>Account_PreventFromUpdatingInactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account.PreventFromUpdatingInactive</label>
    <type>Checkbox</type>
</CustomField>