src/force-app/main/default/objects/FeaturesEnabler__c/fields/Account_PreventInactiveAccountUpdate__c.field-meta.xml
<CustomField>
    <fullName>Account_PreventInactiveAccountUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account.PreventInactiveAccountUpdate</label>
    <type>Checkbox</type>
</CustomField>