src/force-app/main/default/objects/FeaturesEnabler__c/fields/Account_PreventInactiveUpdate__c.field-meta.xml
<CustomField>
    <fullName>Account_PreventInactiveUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account.PreventInactiveUpdate</label>
    <type>Checkbox</type>
</CustomField>