src/force-app/main/default/objects/FeaturesEnabler__c/fields/Account_PreventUpdateIfInactive__c.field-meta.xml
<CustomField>
    <fullName>Account_PreventUpdateIfInactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account.PreventUpdateIfInactive</label>
    <type>Checkbox</type>
</CustomField>