src/force-app/main/default/objects/FeaturesEnabler__c/fields/Account_PreventUpdateInactiveAccount__c.field-meta.xml
<CustomField>
    <fullName>Account_PreventUpdateInactiveAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account.PreventUpdateInactiveAccount</label>
    <type>Checkbox</type>
</CustomField>