src/force-app/main/default/objects/FeaturesEnabler__c/fields/Account_PreventUpdateInactiveAccounts__c.field-meta.xml
<CustomField>
    <fullName>Account_PreventUpdateInactiveAccounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account.PreventUpdateInactiveAccounts</label>
    <type>Checkbox</type>
</CustomField>