src/force-app/main/default/objects/FeaturesEnabler__c/fields/Account_PreventUpdatesOnInactive__c.field-meta.xml
<CustomField>
    <fullName>Account_PreventUpdatesOnInactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable/Disable prevention of updates for inactive Accounts</description>
    <label>Account.PreventUpdatesOnInactive</label>
    <type>Checkbox</type>
</CustomField>