src/force-app/main/default/objects/FeaturesEnabler__c/fields/Account_SetActiveNewAccounts__c.field-meta.xml
<CustomField>
    <fullName>Account_SetActiveNewAccounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account.SetActiveNewAccounts</label>
    <type>Checkbox</type>
</CustomField>