src/force-app/main/default/objects/FeaturesEnabler__c/fields/Case_PreventStatusChangeByNotAnOwner__c.field-meta.xml
<CustomField>
    <fullName>Case_PreventStatusChangeByNotAnOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case.PreventStatusChangeByNotAnOwner</label>
    <type>Checkbox</type>
</CustomField>