src/force-app/main/default/objects/FeaturesEnabler__c/fields/Case_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Case_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case.Trigger</label>
    <type>Checkbox</type>
</CustomField>