src/force-app/main/default/objects/FeaturesEnabler__c/fields/Order_CaptureLastStatusChange__c.field-meta.xml
<CustomField>
    <fullName>Order_CaptureLastStatusChange__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Order.Capture Last Status Change</label>
    <type>Checkbox</type>
</CustomField>