src/force-app/main/default/objects/FeaturesEnabler__c/fields/Order_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Order_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Order.Trigger</label>
    <type>Checkbox</type>
</CustomField>