src/force-app/main/default/objects/FeaturesEnabler__c/fields/Order_ValidateActivation__c.field-meta.xml
<CustomField>
    <fullName>Order_ValidateActivation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Order.Validate Activation</label>
    <type>Checkbox</type>
</CustomField>