src/force-app/main/default/objects/FeaturesEnabler__c/fields/Order_ValidateShipment__c.field-meta.xml
<CustomField>
    <fullName>Order_ValidateShipment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Order.Validate Shipment</label>
    <type>Checkbox</type>
</CustomField>